# app/docs/swagger.json
@@ -52,11 +52,58 @@
                         "name": "file",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Post reward",
+                        "name": "reward",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "Post created successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/posts/found": {
+            "put": {
+                "description": "Found pet",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "posts"
+                ],
+                "summary": "Found pet",
+                "parameters": [
+                    {
+                        "description": "Post ID",
+                        "name": "id",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.FoundPost"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Pet found",
                         "schema": {
                             "type": "string"
                         }
@@ -204,6 +251,17 @@
         }
     },
     "definitions": {
+        "model.FoundPost": {
+            "type": "object",
+            "properties": {
+                "found_id": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "model.Login": {
             "type": "object",
             "properties": {
